Fix Sonar Issues
Signed-off-by: Duane May <duane.may@broadcom.com>